feat: diamond dragon armor can be upgraded